2006-01-08 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsLogger/_ErrorReportAssistant.py: don't show excep twice
	* src/GrampsLogger/_ErrorView.py: don't show excep twice
	* src/GrampsLogger/_GtkHandler.py: don't show excep twice
	* src/GrampsLogger/_RotateHandler.py: don't show excep twice
	
2006-01-08 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/Assistant.py: changed button handling to improve usability
	* src/GrampsLogger/_ErrorReportAssistant.py: rewording and some frames.

2006-01-07  Don Allingham  <don@gramps-project.org>
	* src/FamilyList.py: new family list view
	* src/DisplayModels.py: model for family list
	* src/GrampsDb/_GrampsDbBase.py: column order for family view
	* src/PageView.py: support for ctrl-j for jump to person by gramps id
	* src/PersonView.py: support for ctrl-j for jump to person by gramps id
	* src/ToolTips.py: fix spacing
	* src/ViewManager.py: remember toolbar/sidebar status.
	* src/FamilyView.py: fix gtk.Table's bizzare way of handling empty
	columns that are spanned.
	* src/GrampsLogger/_ErrorView.py: make dialog more HIG compliant

2006-01-06  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: don't access db maps directly
	* src/PeopleModel.py: don't access db maps directly
	* src/FamilyView.py: add gender symbol to primary person
	* src/GrampsDb/_GrampsBSDDB.py: provide access functions to avoid
	redirect map access
	* src/GrampsDb/_GrampsDbBase.py: provide access functions to avoid
	redirect map access
	* src/GrampsDb/_ReadGedcom.py: don't access db maps directly

2006-01-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsLogger/.cvsignore: Add to CVS.
	* src/const.py.in: Add directory for the db environment.
	* src/GrampsDb/_GrampsDbBase.py: Use new logging;
	(get_number_of_repositories): add method; (_del_*): add
	placeholder methods -- must be overriden in derived classes.
	* src/GrampsDb/_GrampsBSDDB.py: Use new logging; Add txn attribute