@@ -1,3 +1,9 @@
+2006-01-08  Don Allingham  <don@gramps-project.org>
+	* src/DisplayModels.py: Fix sorting
+	* src/FamilyList.py: Fix sorting
+	* src/PageView.py: Fix sorting
+	* src/GrampsDb/_GrampsDbBase.py: set default column sorting order
+
 2006-01-08 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/GrampsLogger/_ErrorReportAssistant.py: don't show excep twice
 	* src/GrampsLogger/_ErrorView.py: don't show excep twice
